Added link to robost4r github, and added description for log project

--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
             </div>
         </section>
         <div class="tile-container">
-            <div class="tile" data-content="Now Showing, a dynamic site that collects information about all current theatrical releases in the United States, and provides easy access to official trailers.">
-                <a href="http://movies.robost4r.com">
+
+            <a href="movies.html" class="tile" data-content="Now Showing, a dynamic site that collects information about all current theatrical releases in the United States, and provides easy access to official trailers.">
                     <img alt="Now Showing Project" src="img/now_showing.jpg">
-                </div></a>
-            <div class="tile" data-content="Robost4r, a Python driven chatbot for Twitch streaming.  Provides many custom commands tailored towards community engagement for speed-runners.">
-                <img alt="Chatbot Project" src="img/chat.png"></div>
-            <div class="tile" data-content="In this project, you'll practice your SQL skills by building a reporting tool that summarizes data from a large database.">
-                <img alt="SQL Project" src="img/microsoft-sql-server.svg"></div>
+            </a>
+            <a href="https://github.com/MrCausality/robost4r" class="tile" data-content="Robost4r, a Python driven chatbot for Twitch streaming.  Provides many custom commands tailored towards community engagement for speed-runners.">
+                <img alt="Chatbot Project" src="img/chat.png"></a>
+            <a href="https://github.com/MrCausality/logs-analysis-project" class="tile" data-content="In this project, a mock database of over a million entries is searched to demonstrate mastery of complex SQL queries.">
+                <img alt="SQL Project" src="img/microsoft-sql-server.svg">
+            </a>
             <div class="tile" data-content="In this project, you will develop an application that provides a list of items within a variety of categories as well as provide a user registration and authentication system.">
                 <img alt="api project" src="img/json_api.png"></div>
             <div class="tile" data-content="In this project, you will develop a single-page application featuring a map of your neighborhood or a neighborhood you would like to visit. You will then add functionality to this map including highlighted locations, third-party data about those locations and various ways to browse the content.">
