Added contact and bio pages

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <body>
         <nav class="topnav">
             <a class="active" href="#portfolio">Portfolio</a>
-            <a href="#Bio">Bio</a>
-            <a href="#contact">Contact</a>
+            <a href="bio.html">Bio</a>
+            <a href="contact.html">Contact</a>
             <a href="#blog">Blog</a>
         </nav>
 
-        <section class="bio">
-            <p class="bio_text">Hello!  I'm Eric Johnson.  I make cool things on computers.  For the last 6 years, I have been
+        <section class="summ">
+            <p class="summ_text">Hello!  I'm Eric Johnson.  I make cool things on computers.  For the last 6 years, I have been
             a systems administrator specializing in automation and cloud technologies.  I found over the years
             that the part of my job I loved the most was writing code that does cool things.  So, I decided to
             cut out the parts I didn't like about systems administration, and write code full time.
@@ -23,7 +23,7 @@
             <br>
             Enough about me.  You're here to see my work, so here it is!
             </p>
-            <div class="bio_pic">
+            <div class="logo">
                 <img alt="EJ Logo" src="img/logo.png">
             </div>
         </section>
@@ -37,8 +37,9 @@
             <a href="https://github.com/MrCausality/logs-analysis-project" class="tile" data-content="In this project, a mock database of over a million entries is searched to demonstrate mastery of complex SQL queries.">
                 <img alt="SQL Project" src="img/microsoft-sql-server.svg">
             </a>
-            <div class="tile" data-content="In this project, you will develop an application that provides a list of items within a variety of categories as well as provide a user registration and authentication system.">
-                <img alt="api project" src="img/json_api.png"></div>
+            <a href="https://github.com/MrCausality/menu-site" class="tile" data-content="A simple restaurant menu web app showcasing CRUD ORM operations with JSON API support.">
+                <img alt="api project" src="img/json_api.png">
+            </a>
             <div class="tile" data-content="In this project, you will develop a single-page application featuring a map of your neighborhood or a neighborhood you would like to visit. You will then add functionality to this map including highlighted locations, third-party data about those locations and various ways to browse the content.">
                 <img alt="Map Project" src="img/map_icon.png"></div>
             <div class="tile" data-content="In this unknown future project, you will create something really cool.">
