--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <a href="https://github.com/MrCausality/menu-site" class="tile" data-content="A simple restaurant menu web app showcasing CRUD ORM operations with JSON API support.">
                 <img alt="api project" src="img/json_api.png">
             </a>
-            <div class="tile" data-content="In this project, you will develop a single-page application featuring a map of your neighborhood or a neighborhood you would like to visit. You will then add functionality to this map including highlighted locations, third-party data about those locations and various ways to browse the content.">
+            <div class="tile" data-content="Maps project in development, not yet public.">
                 <img alt="Map Project" src="img/map_icon.png"></div>
-            <div class="tile" data-content="In this unknown future project, you will create something really cool.">
+            <div class="tile" data-content="In this unknown future project, I will dazzle you with my creativity and technical prowess!">
                 <img alt="Unknown Project" src="img/question_mark.png"></div>
         </div>
     </body>
