Updated site to include library project

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
             <a href="https://github.com/MrCausality/menu-site" class="tile" data-content="A simple restaurant menu web app showcasing CRUD ORM operations with JSON API support.">
                 <img alt="api project" src="img/json_api.png">
             </a>
+            <a href="https://github.com/MrCausality/little-elibrary" class="tile" data-content="In this personal library app, you can catalog your book collection and view the collections of other users. Showcases OAuth2, Flask, and SQLAlchemy.">
+                <img alt="Library Project" src="img/library.png"></a>
             <div class="tile" data-content="Maps project in development, not yet public.">
                 <img alt="Map Project" src="img/map_icon.png"></div>
-            <div class="tile" data-content="In this unknown future project, I will dazzle you with my creativity and technical prowess!">
-                <img alt="Unknown Project" src="img/question_mark.png"></div>
+
         </div>
     </body>
     <footer class="contact">
